--- a/style.css
+++ b/style.css
@@ -41,18 +41,16 @@ main{
     display:flex;
     flex-direction: column;
     gap: 20px;
-    padding: 4em 3em;
+    padding: 1em;
     background-color: var(--color-bg);
     box-shadow: 10px 10px 10px 5px var(--color-shadow);
     height: 90%;
-    width: 90%;
     border-radius: 20px;
 }
 .filter-container{
     display: flex;
     justify-content: center;
     gap: 1em;
-    /* background-color: #111827; */
     width: 90%;
     align-self: center;
     
@@ -86,6 +84,9 @@ main{
     font-size: 16px;
     width: 4em;
     background-color: var(--color-bg);
+}
+.task:focus{
+    border: none !important;
 }
 .add-btn{
     background-color: var(--color-dark-accent);
