--- a/style.css
+++ b/style.css
@@ -84,6 +84,7 @@ main{
     font-size: 16px;
     width: 4em;
     background-color: var(--color-bg);
+
 }
 .task:focus{
     border: none !important;
@@ -101,33 +102,39 @@ main{
     flex-direction: column;
     border: 1px solid lightgray;
     border-radius: 20px;
-    padding: 10px 30px;
-    gap: 10px;
+    padding: 10px 10px;
     text-overflow: ellipsis;
+    gap: 10px;
+    box-shadow: 0px 0px 5px 1px rgba(128, 128, 128, 0.534);
 }
 .tasks-container h2{
     font-size: 1em;
 }
+span{
+    color: var(--color-text-secondary);
+}
 .tasks-container .inner-container{
     display: grid;
-    grid-template-columns: .5fr 2fr .5fr .5fr  ;
+    width: 100%;
+    grid-template-columns: .5fr 3fr .5fr .5fr  ;
     gap: 5px;
     margin-right: 10px;
+    align-items: center;
 }
 
 img{
-    height: 15px;
-    /* background-color: lightgray; */
-
+    height: 10px;
 }
 .edite, .remove{
     background-color: lightgray;
     display: flex;
-    height: 100%;
-    width: 100%;
+    height: 1em;
+    width: 1em;
     padding: 1px;
     justify-content: center;
     align-items: center;
     border-radius: 10px;
+    padding: 10px;
+    box-shadow: 1px 1px 3px 1px rgb(176, 176, 176) ;
 
 }
