--- a/style1.css
+++ b/style1.css
@@ -205,6 +205,7 @@ input[type="checkbox"] {
     border-radius: 5px;
     cursor: pointer;
     accent-color: var(--accent);
+    border: 2px solid var(--text-muted);
 }
 
 .tasks-container:has(.checkbox:checked) .taskInput {
@@ -274,4 +275,33 @@ img {
 
 .task-buttons button:hover img {
     opacity: 0.9;
+}
+
+input[type="checkbox"] {
+    appearance: none;
+    -webkit-appearance: none;
+
+    width: 18px;
+    height: 18px;
+    min-width: 18px;
+
+    border: 2px solid var(--accent);
+    border-radius: 5px;
+
+    background-color: var(--bg);
+    cursor: pointer;
+    position: relative;
+    display: inline-block;
+}
+input[type="checkbox"]:checked {
+    background-color: var(--accent);
+}
+input[type="checkbox"]:checked::after {
+    content: "✔";
+    position: absolute;
+    color: white;
+    font-size: 12px;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -55%);
 }
